<resources>
    <string name="app_name">Product Scanner</string>
    <string name="title_scanner">Scanner</string>
    <string name="title_database">Database</string>
    <string name="invalidProductCode">Invalid product code\n%1$s</string>
    <string name="remove_button">Remove</string>
    <string name="add_button">Add</string>
    <string name="scan_product_hint">Scan the first product</string>
    <string name="quantity_format">%1$d pcs</string>
    <string name="current_quantity_format">Current quantity: %1$d pcs</string>
    <string name="title_activity_settings">Settings</string>

    <string name="feedback_header">Feedback</string>
    <string name="haptic_feedback">Haptic feedback</string>
    <string name="haptic_summary">Make vibration on successful code read</string>
    <string name="sound_feedback">Sound feedback</string>
    <string name="sound_summary">Make beep when code read</string>
    <string name="database_header">Database</string>
    <string name="clear_database">Clear database</string>
    <string name="clear_database_summary">Remove all of the products from local database</string>
    <string name="reader_header">Scanner</string>
    <string name="formats_title">Supported formats</string>
    <string name="title_settings">Settings</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="database_clearing_message">Are you sure you want to delete every item in the cloud database? This can\'t be undone.</string>
    <string name="database_clearing_title">Clearing Database</string>
    <string name="search">Search</string>
    <string name="camera_denied">Camera permission denied</string>
    <string name="behavior_header">Behavior</string>
    <string name="volume_buttons">Hardware buttons</string>
    <string name="volume_button_summary">Use volume buttons to add/remove product</string>
    <string name="demo_data_summary">Populate database with random products for demo purposes</string>
    <string name="demo_data">Create demo data</string>
    <string name="demo_data_title">Creating demo data</string>
    <string name="demo_data_message">Are you sure you want to fill database with random products? This can\'t be undone.</string>
    <string name="search_product_hint">Product code</string>
    <string name="account_header">Account</string>
    <string name="sign_in_summary">Sing in with your account</string>
    <string name="sign_in">Sign in</string>
    <string name="no_user">You are not signed in</string>
    <string name="status_signed_out">Signed out</string>
    <string name="status_signed_in">Signed in</string>
    <string name="sign_out_btn">Sign out</string>
    <string name="sign_in_btn">Sign in</string>
    <string name="status_signed_in_long">Signed is as %1$s</string>

    <string name="sign_up_success">Account created, please log in</string>
    <string name="sign_up_failed">Sign up failed</string>
    <string name="bad_password_format">Bad password format</string>
    <string name="bad_email_format">Bad email format</string>
    <string name="password_match_error">Passwords don\'t match</string>
    <string name="sign_in_fail">Sign in failed</string>
    <string name="login_header">Login</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="sign_up_header">Sign up</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up_button">Sign up</string>
</resources>